--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>RESTfully Realtime Prototype</title>
+
+    <link href="/css/normalize.css" rel="stylesheet">
+    <link href="/css/brixi.css" rel="stylesheet">
+    <link href="/css/base.css" rel="stylesheet">
+
     <!-- <script type="module" src="/js/ws.js"></script> -->
 </head>
 <body>
