Added toaster notifications & refined text input value parsing

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link href="/css/base.css" rel="stylesheet">
     <link href="/css/buttons.css" rel="stylesheet">
     <link href="/css/input.css" rel="stylesheet">
+    <link href="/css/toaster.css" rel="stylesheet">
 
     <script>
         (function(){
